src/test/ui/hrtb/issue-46989.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-46989.rs:38:5
   |
LL |     assert_foo::<fn(&i32)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

